--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,36 @@
-<!doctype html>
-<html lang="en">
+!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
   <title>DropZone</title>
-  <base href="/">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">DropZone</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#about" class="w3-bar-item w3-button"></a>
+      <a href="#menu" class="w3-bar-item w3-button"></a>
+      <a href="#contact" class="w3-bar-item w3-button">Panier</a>
+    </div>
+  </div>
+</div>
+<!-- Page content -->
+<div class="w3-content" style="max-width:1100px">
+  <!-- About Section -->
+  
   <app-root></app-root>
+<!-- End page content -->
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-light-grey w3-padding-32">
+  
+</footer>
+
 </body>
 </html>
