--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
     <a href="#home" class="w3-bar-item w3-button">DropZone</a>
+    <input id="searchbar" type="text" placeholder="Search..">
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button"></a>
